--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('otto_group')"
+   ]
   },
   {
    "cell_type": "code",
