--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('otto_group')"
+    "df = pd.read_csv('otto_group.csv')\n",
+    "df.head()"
    ]
   },
   {
