--- a/index.ipynb
+++ b/index.ipynb
@@ -90,6 +90,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_csv('otto_group.csv')\n",
     "df.head()"
    ]
