--- a/index.ipynb
+++ b/index.ipynb
@@ -331,7 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "feat = df.loc[:, 'feat_1':'feat_30']\n",
+    "feat.hist(figsize=(30,20));"
    ]
   },
   {
