--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "feat.boxplot(figsize=(10,10));"
    ]
   },
   {
