--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "\n",
+    "feat.isna().any().any()"
    ]
   },
   {
