--- a/index.ipynb
+++ b/index.ipynb
@@ -424,7 +424,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "feat = df.loc[:, 'feat_1':'feat_93']\n",
+    "\n",
+    "import seaborn as sns\n",
+    "sns.heatmap(feat.corr(), center=0);"
    ]
   },
   {
