Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -732,7 +732,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
